@@ -1,13 +1,16 @@
 <?php
 // $Id$
 
-class AdminMenuTestCase extends DrupalWebTestCase {
+/**
+ * Test menu links depending on user permissions.
+ */
+class AdminMenuPermissionsTestCase extends DrupalWebTestCase {
 
   function getInfo() {
     return array(
-      'name' => t('Admin menu functionality'),
-      'description' => t('Enable a module, make sure an admin user can see the new link.'),
-      'group' => t('Admin menu tests'),
+      'name' => t('Menu link permissions'),
+      'description' => t('Verify that menu is displayed according to user permissions.'),
+      'group' => t('Administration menu'),
     );
   }
 
@@ -18,35 +21,68 @@ class AdminMenuTestCase extends DrupalWebTestCase {
   /**
    * Test that the links are added to the page (no JS testing).
    */
-  function testAdminMenu() {
+  function testPermissions() {
     // Anonymous users should not see the menu.
-    $this->assertNoRaw('<div id="admin-menu">', 'Admin menu not displayed to anonymous.');
+    $this->assertNoRaw('<div id="admin-menu">', t('Admin menu not displayed to anonymous.'));
 
-    // Create a user who can see the admin_menu links, but without the
+    // Create a new user who can access administration menu, but without the
     // permission 'display drupal links'.
-    $admin_user = $this->drupalCreateUser(array('administer site configuration', 'access administration pages', 'administer nodes', 'bypass node access', 'access administration menu', 'administer site-wide contact form'));
+    $admin_user = $this->drupalCreateUser(array('administer site configuration', 'access administration pages', 'administer nodes', 'bypass node access', 'access administration menu'));
     $this->drupalLogin($admin_user);
 
     // Check that the user can see the admin links, but not the drupal links.
-    $this->assertRaw('<div id="admin-menu">', 'Admin menu displayed to admin user.');
+    $this->assertRaw('<div id="admin-menu">', t('Administration menu is displayed.'));
     $this->drupalGet('node');
-    $this->assertTrue(preg_match('@<div id="admin-menu">(.*\n)*.*admin/content/node@',  $this->drupalGetContent()), 'Administer content link found');
-    $this->assertFalse(preg_match('@<div id="admin-menu">(.*\n)*.*http://drupal.org@',  $this->drupalGetContent()), 'Drupal link not found');
-    $this->assertFalse(preg_match('@<div id="admin-menu">(.*\n)*.*admin/build/contact@',  $this->drupalGetContent()), 'Contact module link not found');
+    $this->assertPattern('@<div id="admin-menu">(.*\n)*.*admin/content/node@', t('Administer content link found.'));
+    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*http://drupal.org@', t('Drupal links not found.'));
+    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link not found.'));
 
-    // Check that a link for the newly enabled module appears.
-    $this->drupalModuleEnable('contact');
-    $this->drupalGet('node');
-    $this->assertTrue(preg_match('@<div id="admin-menu">(.*\n)*.*admin/build/contact@',  $this->drupalGetContent()), 'Contact module link found');
-    $this->drupalLogout();
-
-    // A second user with the added permission 'display drupal links', but not
-    // 'administer site-wide contact form'.
+    // Create a new user with the permission 'display drupal links'.
     $admin_user2 = $this->drupalCreateUser(array('administer site configuration', 'access administration pages', 'administer nodes', 'access administration menu', 'display drupal links'));
     $this->drupalLogin($admin_user2);
     $this->drupalGet('node');
-    $this->assertTrue(preg_match('@<div id="admin-menu">(.*\n)*.*http://drupal.org@',  $this->drupalGetContent()), 'Drupal link found');
-    $this->assertFalse(preg_match('@<div id="admin-menu">(.*\n)*.*admin/build/contact@',  $this->drupalGetContent()), 'Contact module link not found');
+    $this->assertPattern('@<div id="admin-menu">(.*\n)*.*http://drupal.org@', t('Drupal links found.'));
+    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link not found.'));
+  }
+}
+
+/**
+ * Test menu links depending on installed modules.
+ */
+class AdminMenuModulesTestCase extends DrupalWebTestCase {
+
+  function getInfo() {
+    return array(
+      'name' => t('Module menu links'),
+      'description' => t('Verify that menu contains links according to enabled modules.'),
+      'group' => t('Administration menu'),
+    );
+  }
+
+  function setUp() {
+    parent::setUp('admin_menu', 'contact');
+  }
+
+  /**
+   * Test that the links are added to the page (no JS testing).
+   */
+  function testContactModuleLinks() {
+    // Create a new user without 'administer site-wide contact form' permission.
+    $admin_user = $this->drupalCreateUser(array('access administration pages', 'access administration menu'));
+    $this->drupalLogin($admin_user);
+
+    // Verify that proper links are displayed.
+    $this->assertRaw('<div id="admin-menu">', t('Administration menu is displayed.'));
+    $this->drupalGet('node');
+    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link not found.'));
+
+    // Create a new user with 'administer site-wide contact form' permission.
+    $admin_user = $this->drupalCreateUser(array('access administration pages', 'access administration menu', 'administer site-wide contact form'));
+    $this->drupalLogin($admin_user);
+
+    // Verify that proper links are displayed.
+    $this->drupalGet('node');
+    $this->assertPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link found.'));
   }
 }
 
