@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-1.x, xxxx-xx-xx
 ------------------------------
+by sun: Fixed admin menu tests (and updated to 6.x for SimpleTest 2.x).
 #359158 by nitrospectide, sun: Fixed Devel Themer breaks admin menu.
 #365335 by sun: Fixed not all variables removed after uninstall.
 #362454 by sun: Fixed Drupal.settings.admin_menu is undefined JS error in some
